incorporacion de GridSystem de BS

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -126,7 +126,8 @@
         
         </form>
 
-        <div class="tienda__productos">
+        <div class="tienda__productos"> <!-- Repeti las imagenes de productos y sus nombres ya que por 
+            el momento no me parecia necesario mas variedad al fin al cabo es mas ilustrativo que funcional -->
 
             <div class="tienda__productos__style">
         
