incorporacion de SASS

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AyN las especias - Tienda</title>
-    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../SASS/main.css">
 </head>
 
 
