--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -339,6 +339,8 @@
 
     <div class="pie__contacto">
 
+        <h5> Redes </h5>
+
         <div class="fb">    
 
             <a href="https://es-la.facebook.com" target="_blank"><img src="../img/iconFB.png" alt="fb"></a> 
