--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AyN las especias - quienes somos</title>
+    <meta name="description" content="Somos una empresa de condimentos dedicada a ofrecer las mejores especias a los mejores precios">
+    <meta name="keywords" content="condimentos, especias, empresa, Argentina, Buenos Aires, MonteGrande">
+    <title>AyN las especias | quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
