--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayn Las especias - Suscripciones </title>
+    <meta name="description" content="conoce nuestros planes de suscripcion y todos sus beneficios">
+    <meta name="keywords" content="condimentos, especias, Argentina, Buenos Aires, suscripciones">
+    <title>Ayn Las especias | Suscripciones </title>
     <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
