--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AyN las especias - Tienda</title>
+    <meta name="description" content="conoce todos nuestros productos a excelentes precios">
+    <meta name="keywords" content="condimentos, especias, oregano, condimento para pizza, pimienta roja, Argentina, Buenos Aires">
+    <title>AyN las especias | Tienda</title>
     <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
