--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="description" content="suscribite a nuestro boletin informativo para ser el primero en enterarte de descuentos y nuevos productos">
     <meta name="keywords" content="condimentos, especias, instagram,facebook,boletin, Argentina, Buenos Aires">
     <title>AyN las especias | Contacto </title>
-    <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logoAyN(fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
