--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -7,7 +7,7 @@
     <meta name="description" content="conoce nuestros planes de suscripcion y todos sus beneficios">
     <meta name="keywords" content="condimentos, especias, Argentina, Buenos Aires, suscripciones">
     <title>Ayn Las especias | Suscripciones </title>
-    <link rel="shortcut icon" href="../img/logo ayn (fondo blanco).jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logoAyN(fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
