--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="los mejores condimentos para tus comidas a los mejores precios.">
     <meta name="keywords" content="condimentos, especias, oregano, Argentina, Buenos Aires">
     <title>AyN las especias | empresa de condimentos </title>
-    <link rel="shortcut icon" href="./img/logo ayn (fondo blanco).jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logoAyN(fondo blanco).jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
