--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -352,7 +352,7 @@
 
         <div class="pie__contacto__style">    
     
-            <a href="https://es-la.facebook.com" target="_blank"><img src="../img/iconFB.svg" alt="fb"></a> 
+            <a href="https://www.facebook.com/ayn.lasespecias" target="_blank"><img src="../img/iconFB.svg" alt="fb"></a> 
             
             <p>Ayn Las Especias</p>
 
@@ -360,7 +360,7 @@
 
         <div class="pie__contacto__style">
 
-            <a href="https://www.instagram.com" target="_blank"><img src="../img/iconIG.svg" alt=""></a>
+            <a href="https://www.instagram.com/ayn.lasespecias/" target="_blank"><img src="../img/iconIG.svg" alt=""></a>
 
             <p>ayn.lasespecias</p>
 
